services/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend
spec:
  selector:
    matchLabels:
      app: my-frontend
  template:
    metadata:
      labels:
        app: my-frontend
    spec:
      containers:
        - name: my-frontend
          image: my-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
