services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend-service
spec:
  selector:
    app: my-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
